<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2021-2025 the original author or authors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.michael-simons.scrobbles4j</groupId>
	<artifactId>scrobbles4j</artifactId>
	<version>1-ea</version>
	<packaging>pom</packaging>

	<inceptionYear>2021</inceptionYear>
	<organization>
		<name>michael-simons.eu</name>
		<url>http://michael-simons.eu</url>
	</organization>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>msimons</id>
			<name>Michael Simons</name>
			<email>michael at simons.ac</email>
			<roles>
				<role>Project Lead</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<modules>
		<module>model</module>
		<module>client</module>
		<module>server</module>
	</modules>

	<properties>
		<assertj.version>3.27.3</assertj.version>
		<byte-buddy.version>1.17.5</byte-buddy.version>
		<checkstyle.version>10.25.0</checkstyle.version>
		<jdbi3.version>3.49.5</jdbi3.version>
		<junit-jupiter.version>5.13.1</junit-jupiter.version>
		<license-maven-plugin.version>5.0.0</license-maven-plugin.version>
		<maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
		<maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
		<maven-jlink-plugin.version>3.2.0</maven-jlink-plugin.version>
		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.release>24</maven.compiler.release>
		<maven.version>3.9.10</maven.version>
		<mockito.version>5.18.0</mockito.version>
		<picocli.version>4.7.7</picocli.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
		<quarkus.platform.version>3.23.4</quarkus.platform.version>
		<sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
		<spring-javaformat.version>0.0.46</spring-javaformat.version>
		<wiremock.version>2.35.2</wiremock.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit-jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock-jre8</artifactId>
				<version>${wiremock.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.errorprone</groupId>
				<artifactId>error_prone_annotations</artifactId>
				<version>2.38.0</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocli.version}</version>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${byte-buddy.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.17.0</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>9.8</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>${license-maven-plugin.version}</version>
					<configuration>
						<strictCheck>true</strictCheck>
						<mapping>
							<factories>SCRIPT_STYLE</factories>
						</mapping>
						<properties>
							<year>2025</year>
						</properties>
						<licenseSets>
							<licenseSet>
								<header>etc/license.tpl</header>
								<includes>
									<include>**</include>
								</includes>
								<excludes>
									<exclude>**/*.adoc</exclude>
									<exclude>**/*.css</exclude>
									<exclude>**/*.html</exclude>
									<exclude>**/*.sh</exclude>
									<exclude>**/*.shortcut</exclude>
									<exclude>**/*.sql</exclude>
									<exclude>**/*.tpl</exclude>
									<exclude>**/*.txt</exclude>
									<exclude>**/*.yaml</exclude>
								</excludes>
							</licenseSet>
						</licenseSets>
						<dependencyEnforce>true</dependencyEnforce>
						<dependencyExceptionMessage>One or more dependencies are licensed under a non-approved license.</dependencyExceptionMessage>
						<dependencyPolicies>
							<dependencyPolicy>
								<type>LICENSE_URL</type>
								<rule>APPROVE</rule>
								<value>https://www.apache.org/licenses/LICENSE-2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>Apache License, Version 2</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>Apache License, Version 2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>The Apache Software License, Version 2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>The Apache Software License, version 2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>Apache-2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>Apache License 2.0</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>Apache 2</value>
							</dependencyPolicy>
							<dependencyPolicy>
								<type>LICENSE_NAME</type>
								<rule>APPROVE</rule>
								<value>LGPL</value>
							</dependencyPolicy>
						</dependencyPolicies>
					</configuration>
				</plugin>
				<plugin>
					<groupId>io.spring.javaformat</groupId>
					<artifactId>spring-javaformat-maven-plugin</artifactId>
					<version>${spring-javaformat.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${maven-checkstyle-plugin.version}</version>
					<configuration>
						<excludes>**/module-info.java</excludes>
						<includeTestSourceDirectory>true</includeTestSourceDirectory>
						<configLocation>etc/checkstyle/config.xml</configLocation>
						<suppressionsLocation>etc/checkstyle/suppressions.xml</suppressionsLocation>
						<inputEncoding>${project.build.sourceEncoding}</inputEncoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>true</failsOnError>
						<includeTestSourceDirectory>true</includeTestSourceDirectory>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${checkstyle.version}</version>
						</dependency>
						<dependency>
							<groupId>io.spring.javaformat</groupId>
							<artifactId>spring-javaformat-checkstyle</artifactId>
							<version>${spring-javaformat.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
					<configuration>
						<rules>
							<DependencyConvergence />
							<requireMavenVersion>
								<version>${maven.version}</version>
							</requireMavenVersion>
							<requireJavaVersion>
								<version>${maven.compiler.release}</version>
							</requireJavaVersion>
						</rules>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
					<executions>
						<execution>
							<id>copy-installed</id>
							<goals>
								<goal>copy</goal>
							</goals>
							<phase>verify</phase>
							<configuration>
								<artifactItems>
									<artifactItem>
										<groupId>${project.groupId}</groupId>
										<artifactId>${project.artifactId}</artifactId>
										<version>${project.version}</version>
										<type>${project.packaging}</type>
									</artifactItem>
								</artifactItems>
								<outputDirectory>${project.build.directory}/modules</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jlink-plugin</artifactId>
					<version>${maven-jlink-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>com.github.ekryd.sortpom</groupId>
					<artifactId>sortpom-maven-plugin</artifactId>
					<version>${sortpom-maven-plugin.version}</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
						<keepBlankLines>true</keepBlankLines>
						<nrOfIndentSpace>-1</nrOfIndentSpace>
						<sortProperties>true</sortProperties>
						<sortDependencies>scope,groupId,artifactId</sortDependencies>
						<createBackupFile>false</createBackupFile>
						<expandEmptyElements>false</expandEmptyElements>
						<verifyFail>stop</verifyFail>
						<verifyFailOn>strict</verifyFailOn>
						<spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
						<pomFile>pom.xml</pomFile>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>${quarkus.platform.group-id}</groupId>
					<artifactId>quarkus-maven-plugin</artifactId>
					<version>${quarkus.platform.version}</version>
					<extensions>true</extensions>
					<configuration>
						<skip>true</skip>
						<skipPlugins>
							<plugin>com.github.ekryd.sortpom:sortpom-maven-plugin</plugin>
							<plugin>com.mycila:license-maven-plugin</plugin>
							<plugin>io.spring.javaformat:spring-javaformat-maven-plugin</plugin>
							<plugin>org.apache.maven.plugins:maven-checkstyle-plugin</plugin>
							<plugin>org.apache.maven.plugins:maven-enforcer-plugin</plugin>
						</skipPlugins>
						<!--
						 Exception java.lang.IllegalAccessError: module java.base does not open java.lang to unnamed module @7875ff50;
						 to use the thread-local-reset capability on Java 24 or later, use this JVM option:
						 -->
						<jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>build</goal>
								<goal>generate-code</goal>
								<goal>generate-code-tests</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>com.github.ekryd.sortpom</groupId>
				<artifactId>sortpom-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>verify</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>validate</id>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>validate</goal>
						</goals>
						<phase>validate</phase>
						<inherited>true</inherited>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<executions>
					<execution>
						<id>validate</id>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<forceLegacyJavacApi>true</forceLegacyJavacApi>
					<showWarnings>true</showWarnings>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>-Xlint:all,-options,-path,-processing</arg>
						<arg>-Werror</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<detectOfflineLinks>false</detectOfflineLinks>
					<detectJavaApiLink>true</detectJavaApiLink>
					<release>${maven.compiler.release}</release>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>fast</id>
			<activation>
				<property>
					<name>fast</name>
				</property>
			</activation>
			<properties>
				<asciidoctor.skip>true</asciidoctor.skip>
				<checkstyle.skip>true</checkstyle.skip>
				<docker.skip>true</docker.skip>
				<invoker.skip>true</invoker.skip>
				<jacoco.skip>true</jacoco.skip>
				<jqassistant.skip>true</jqassistant.skip>
				<license.skip>true</license.skip>
				<maven.javadoc.skip>true</maven.javadoc.skip>
				<pmd.skip>true</pmd.skip>
				<skipITs>true</skipITs>
				<skipNativeBuild>true</skipNativeBuild>
				<skipTests>true</skipTests>
			</properties>
		</profile>
	</profiles>

</project>
